# SimpleMinecraftSniper

./: README.md  main.py  pyproject.toml  secret.py
