[tool.poetry]
name = "minecraftsniper"
version = "0.1.0"
description = "A simple Minecraft username sniper designed to help get rare usernames."
authors = ["Pygot"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.4"
pytz = "^2025.2"
tzlocal = "^5.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
